# spot_spraying_polygons

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
data/input/: daninha3.geojson  talhoes.geojson  weed1.geojson  weed2.geojson
data/output/: catacao-aabb.geojson  catacao-bcd.geojson  catacao-bp-mops.geojson  catacao-concave-hull.geojson  catacao-convex-hull.geojson  catacao-dbscan-buffer.geojson  catacao-fixed-grid.geojson  catacao-morph-closing.geojson  catacao-mrr.geojson  catacao-quadtree.geojson  catacao-strip-based.geojson  catacao-william.geojson
data/output/paper_stages/: a_detections_points_utm.geojson  b1_buffered_weeds_delta_w_utm.geojson  b2_macro_groups_delta_m_utm.geojson  c1_selected_cluster_input_utm.geojson  c2_selected_cluster_union_utm.geojson  c3_rectangles_trace_tree_utm.geojson  c4_rectangles_final_rho_min_utm.geojson  manifest_paper_stages.json
data/output/paper_stages_mrr_storyboard/: 01_cluster_input_wgs84.geojson  02_union_and_mrr_wgs84.geojson  03_candidate_axes_wgs84.geojson  04_recursive_tree_wgs84.geojson  05_final_rectangles_wgs84.geojson  manifest_paper_stages.json
src/: __init__.py
src/algorithms/: __init__.py  clustering.py  decomposition.py  engine.py  factory.py
src/algorithms/coverage/: __init__.py  _common.py  aabb.py  base.py  bcd.py  bp_mops.py  concave_hull.py  convex_hull.py  dbscan_buffer.py  fixed_grid.py  morph_closing.py  mrr.py  quadtree.py  strip_based.py
src/cli/: main.py  tasks.py
src/core/: __init__.py  config.py  models.py
src/geo/: __init__.py  extraction.py  geometry.py  projection.py  spatial_index.py
src/io/: __init__.py  geojson.py
src/pipeline/: __init__.py  engine.py
src/ui/: algorithm_catalog.py  app.py  helpers.py  map_renderer.py  theme.py
src/utils/: pulverization_lines.py
src/utils/metrics/: geometric.py  iou.py  sensitivity.py  statistical.py
ui/: __init__.py  algorithm_catalog.py  app.py  helpers.py  map_renderer.py  theme.py
