[project]
name = "spot-spraying-polygons"
version = "1.0.0"
description = "Geração automática de polígonos de catação para pulverização localizada de daninhas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "shapely>=2.0.0",
    "pyproj>=3.7.0",
]

[project.optional-dependencies]
ui = [
    "folium>=0.15.0",
    "streamlit>=1.30.0",
]

[project.scripts]
catacao = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]