[project]
name = "spot-spraying-polygons"
version = "1.0.0"
description = "Automatic generation of spot-spraying polygons for localized weed management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "folium>=0.15.0",
    "geopandas>=1.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyproj>=3.7.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.2",
    "shapely>=2.0.0",
    "streamlit>=1.30.0",
    "tabulate>=0.10.0",
]

[project.scripts]
spot-spray = "src.cli.main:main"
spraying-lines = "src.utils.pulverization_lines:cli"
spraying-lines-batch = "src.utils.pulverization_lines:batch"
geometric-metrics = "src.utils.metrics.geometric:cli"
sensitivity-analysis = "src.utils.metrics.sensitivity:main"
iou-analysis = "src.utils.metrics.iou:main"
likert-stats = "src.utils.metrics.statistical:cli"
dev = "src.cli.tasks:dev"
metrics = "src.cli.tasks:metrics"
ui = "src.cli.tasks:ui"
lines = "src.cli.tasks:lines"
process-method = "src.cli.tasks:process_method"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
exclude-dependencies = ["pyarrow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E402"]